--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../assets/css/base.css">
     <link rel="stylesheet" href="../assets/css/grid.css">
     <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/container.css">
+    <link rel="stylesheet" href="../assets/css/sidebar.css">
+    <link rel="stylesheet" href="../assets/css/main-content.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <!-- Reset CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -24,6 +27,8 @@
 </head>
 <body> 
     <div class="app">
+        <!-- Header --> 
+        <header class="header-wrap">
         <div class="grid wide">
             <div class="row">
                 <div class="col l-12 m-12 c-12">
@@ -378,10 +383,27 @@
                     <!-- End header -->
                 </div>
             </div>
+        </header>   
+        <!-- Separate line -->
+        <div class="separate-line"></div>
+        <!-- Container -->
+        <div class="container">
+            <div class="grid wide">
+                <div class="row">
+                    <div class="col l-8">
+                        <!-- Main content -->
+                        <div class="main-content">
+                        </div>
+                    </div>
+                    <div class="col l-4">
+                        <!-- Sidebar -->
+                        <div class="sidebar">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Border header -->
-        <div class="border-header"></div>
-        <!-- End border header -->
+        <!-- End container -->
     </div>
 </body>
 </html>
