--- a/html/index.html
+++ b/html/index.html
@@ -394,11 +394,135 @@
                     <div class="col l-9">
                         <!-- Main content -->
                         <div class="main-content">
+                            <div class="grid">
+                                <!-- Slider -->
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="slider-show">
+                                            <img id="slider-show-img" class="slider-show__img" src="../assets/img/slider/1.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Slider control -->
+                                <div class="row gutters-s">
+                                    <div class="col l-2-4">
+                                        <div id="slider1" class="slider-control">
+                                            <img class="slider-control__img" src="../assets/img/slider/1.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                    <div class="col l-2-4">
+                                        <div id="slider2" class="slider-control">
+                                            <img class="slider-control__img" src="../assets/img/slider/2.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                    <div class="col l-2-4">
+                                        <div id="slider3" class="slider-control">
+                                            <img class="slider-control__img" src="../assets/img/slider/3.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                    <div class="col l-2-4">
+                                        <div id="slider4" class="slider-control">
+                                            <img class="slider-control__img" src="../assets/img/slider/4.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                    <div class="col l-2-4">
+                                        <div id="slider5" class="slider-control">
+                                            <img class="slider-control__img" src="../assets/img/slider/5.jpg" alt="music video">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="today">
+                                            HÔM NAY
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="just-release">
+                                            MỚI PHÁT HÀNH
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="mv-hot">
+                                            MV HOT
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="songs">
+                                            BÀI HÁT
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="karaoke">
+                                            KARAOKE
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="entertainment">
+                                            GIẢI TRÍ
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col l-3">
                         <!-- Sidebar -->
                         <div class="sidebar">
+                            <div class="grid">
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="artist-weekly">
+                                            NGHỆ SĨ TRONG TUẦN
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="suggest-song">
+                                            BÀI HÁT GỢI Ý
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="hot-topic">
+                                            CHỦ ĐỀ HOT
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="song-rankings">
+                                            BXH BÀI HÁT
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="mv-rankings">
+                                            BXH MV
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col l-12">
+                                        <div class="top-100">
+                                            TOP 100 BÀI HÁT
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -495,19 +619,19 @@
                                 <label for="form-login-name" class="form-label"> 
                                     <span class="form-label__text"> Tên đăng nhập <span class="text-red">*</span> </span>
                                 </label>
-                                <input type="text" id="form-login-name" class="form-input">
+                                <input type="text" id="form-register-name" class="form-input">
                             </div>
                             <div class="form-field">
                                 <label for="form-login-password" class="form-label">
                                     <span class="form-label__text"> Mật khẩu <span class="text-red">*</span></span>
                                 </label>
-                                <input type="text" id="form-login-password" class="form-input">
+                                <input type="text" id="form-register-password" class="form-input">
                             </div>
                             <div class="form-field">
                                 <label for="form-login-password" class="form-label">
                                     <span class="form-label__text"> Nhập lại mật khẩu <span class="text-red">*</span></span>
                                 </label>
-                                <input type="text" id="form-login-password-retype" class="form-input">
+                                <input type="text" id="form-register-password-retype" class="form-input">
                             </div>
                             <div class="form-field">
                                 <label for="form-login-password" class="form-label">
@@ -553,5 +677,6 @@
             <!-- End modal registration -->
         </div>
     </div>
+    <script src="../assets/js/index.js"></script>
 </body>
 </html>
